manifests/base/traefik-ingress-controller-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: traefik-ingress-lb
  name: traefik-ingress-controller
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
    spec:
      containers:
        - args:
            - --api
            - --kubernetes
            - --debug
            - --defaultentrypoints=http
            - --entrypoints=Name:http Address::80
            - --web.metrics.datadog=true
            - --web.metrics.datadog.address=datadog-agent:8125
            - --tracing=true
            - --tracing.backend=datadog
            - --tracing.datadog=true
            - --tracing.datadog.localagenthostport=datadog-agent:8126
          image: traefik:1.7
          name: traefik-ingress-lb
          ports:
            - containerPort: 80
              hostPort: 80
              name: http
            - containerPort: 443
              hostPort: 443
              name: https
            - containerPort: 8080
              hostPort: 8080
              name: admin
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
