manifests/base/vac-benefits-directory-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vac-benefits-directory
  name: vac-benefits-directory
spec:
  ports:
    - name: 3000-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: vac-benefits-directory
  type: ClusterIP
status:
  loadBalancer: {}
