manifests/base/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
    - host: traefik.vacdevopslab.com
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-web-ui
              servicePort: web
